--- a/.github/workflows/backup-notion-hourly.yml
+++ b/.github/workflows/backup-notion-hourly.yml
@@ -44,47 +44,49 @@ jobs:
 
           print("--- Starting Auto-Discovery Backup ---")
 
-          # 1. SEARCH for all accessible objects
+          # 1. SEARCH
           try:
-              # We fetch everything the bot can see to debug permissions
               response = notion.search().get("results", [])
               
-              # Debug: What did the bot actually see?
-              if response:
-                  print(f"DEBUG: Bot can see {len(response)} total items.")
-                  for item in response:
-                      print(f"  - Found {item.get('object')}: {item.get('id')}")
-              
-              # Manually filter for databases only
-              databases = [obj for obj in response if obj.get("object") == "database"]
+              # We now include 'database', 'data_source', and 'page' 
+              # because your workspace uses the newer 'data_source' type.
+              targets = [obj for obj in response if obj.get("object") in ["database", "data_source", "page"]]
           except Exception as e:
               print(f"CRITICAL ERROR during search: {e}")
               exit(1)
 
-          if not databases:
-              print("\n[!] No databases found!")
-              print("ACTION REQUIRED: Go to your Notion Database -> 3 Dots -> Add Connection -> Search for your bot.")
+          if not targets:
+              print("\n[!] No valid targets found!")
           else:
-              print(f"\nFound {len(databases)} databases. Starting extraction...\n")
+              print(f"\nFound {len(targets)} potential targets. Starting extraction...\n")
 
-          for db in databases:
+          for db in targets:
               db_id = db["id"]
-              title_list = db.get("title", [])
-              title = title_list[0].get("plain_text", f"Untitled_{db_id[:8]}") if title_list else f"Untitled_{db_id[:8]}"
+              obj_type = db.get("object")
               
-              print(f"Processing: {title} ({db_id})")
+              # Extract Title
+              title = "Untitled"
+              if "title" in db and isinstance(db["title"], list) and len(db["title"]) > 0:
+                  title = db["title"][0].get("plain_text", title)
+              elif "properties" in db:
+                  # Pages store their title inside properties
+                  for prop in db["properties"].values():
+                      if prop.get("type") == "title":
+                          title = "".join([t.get("plain_text", "") for t in prop.get("title", [])])
               
-              properties = db.get("properties", {})
-              if not properties:
-                  print(f"  [!] Skipping: No properties visible.")
-                  continue
+              if not title or title == "Untitled":
+                  title = f"{obj_type}_{db_id[:8]}"
 
-              # 2. QUERY all rows
-              all_rows = []
-              has_more = True
-              next_cursor = None
+              print(f"Processing {obj_type}: {title} ({db_id})")
               
+              # 2. QUERY 
+              all_rows = []
               try:
+                  # If it's a page, we treat it as a single-row entry or check if it's actually a database
+                  # Notion API often allows querying 'page' objects if they act as databases
+                  has_more = True
+                  next_cursor = None
+                  
                   while has_more:
                       query_result = notion.databases.query(
                           database_id=db_id, 
@@ -97,7 +99,8 @@ jobs:
                   
                   print(f"  Rows found: {len(all_rows)}")
               except Exception as e:
-                  print(f"  [!] Error querying rows: {e}")
+                  # If querying fails, it's likely a standard page, not a database/source.
+                  print(f"  [Skip] Object is likely a standard page, not a collection.")
                   continue
 
               # 3. EXTRACT DATA logic
@@ -123,21 +126,12 @@ jobs:
                           parsed_val = ", ".join([v.get("name", "") for v in val_obj])
                       elif p_type == "date" and val_obj:
                           parsed_val = val_obj.get("start", "")
-                      elif p_type == "number":
-                          parsed_val = val_obj
-                      elif p_type == "checkbox":
-                          parsed_val = val_obj
-                      elif p_type == "url":
-                          parsed_val = val_obj
-                      elif p_type == "email":
-                          parsed_val = val_obj
-                      elif p_type == "phone_number":
+                      elif p_type == "number" or p_type == "checkbox" or p_type == "url":
                           parsed_val = val_obj
                       else:
                           parsed_val = "" 
                       
                       row_data[prop_name] = parsed_val
-                  
                   data.append(row_data)
 
               # 4. SAVE TO CSV
@@ -147,9 +141,7 @@ jobs:
                   
                   df = pd.DataFrame(data)
                   df.to_csv(csv_path, index=False)
-                  print(f"  [SUCCESS] Saved to: {csv_path.name}")
-              else:
-                  print(f"  [?] Database is empty.")
+                  print(f"  [SUCCESS] Saved: {csv_path.name}")
 
           print("\n--- Backup script finished ---")
           EOF
