--- a/.github/workflows/backup-notion-hourly.yml
+++ b/.github/workflows/backup-notion-hourly.yml
@@ -1,4 +1,4 @@
-name: Notion API Backup (Targeted CRM Scan)
+name: Notion API Backup (Direct Request Mode)
 
 permissions:
   contents: write
@@ -21,8 +21,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: |
-          pip install notion-client pandas
+        run: pip install requests pandas
 
       - name: Backup Notion Data
         env:
@@ -30,22 +29,23 @@ jobs:
         run: |
           python - <<'EOF'
           import os
-          import notion_client
-          from notion_client import Client
-          from pathlib import Path
+          import requests
           import pandas as pd
+          from pathlib import Path
 
-          # Initialize Client
-          notion = Client(auth=os.environ["NOTION_TOKEN"])
+          # Setup
+          NOTION_TOKEN = os.environ["NOTION_TOKEN"]
+          HEADERS = {
+              "Authorization": f"Bearer {NOTION_TOKEN}",
+              "Content-Type": "application/json",
+              "Notion-Version": "2022-06-28"
+          }
           output_dir = Path("notion-backup")
           output_dir.mkdir(exist_ok=True)
 
-          print(f"DEBUG: Using notion-client version {notion_client.__version__}")
-
-          # Your specific CRM and Tracker IDs
           ROOT_IDS = [
-              "2fe86657637a80709d98e8848581f4c7",  # Campus International Maroc’s Hub CRM
-              "2fe86657637a80cc8410f9e45f444435"   # Goal Tracker CRM
+              "2fe86657637a80709d98e8848581f4c7", # CRM Hub
+              "2fe86657637a80cc8410f9e45f444435"  # Goals Tracker
           ]
 
           def extract_properties(row):
@@ -54,7 +54,6 @@ jobs:
               for name, content in props.items():
                   p_type = content.get("type")
                   val = content.get(p_type)
-                  
                   if p_type in ["title", "rich_text"]:
                       row_data[name] = "".join([t.get("plain_text", "") for t in val]) if val else ""
                   elif p_type == "select" and val:
@@ -63,68 +62,64 @@ jobs:
                       row_data[name] = ", ".join([v.get("name", "") for v in val])
                   elif p_type == "date" and val:
                       row_data[name] = val.get("start", "")
-                  elif p_type in ["number", "checkbox", "url", "email", "phone_number"]:
+                  elif p_type in ["number", "checkbox", "url", "email"]:
                       row_data[name] = val
                   else:
                       row_data[name] = str(val) if val is not None else ""
               return row_data
 
           def backup_database(db_id, title):
-              print(f"    [FOUND] Extracting Database: {title}")
+              print(f"    [OK] Extracting Database: {title}")
+              url = f"https://api.notion.com/v1/databases/{db_id}/query"
               all_rows = []
-              has_more, cursor = True, None
-              try:
-                  while has_more:
-                      # Using the client's internal request handler as a fallback 
-                      # if the helper method fails.
-                      res = notion.databases.query(
-                          database_id=db_id,
-                          start_cursor=cursor
-                      )
-                      all_rows.extend(res["results"])
-                      has_more, cursor = res["has_more"], res["next_cursor"]
+              has_more = True
+              next_cursor = None
+
+              while has_more:
+                  payload = {"start_cursor": next_cursor} if next_cursor else {}
+                  response = requests.post(url, headers=HEADERS, json=payload)
+                  if response.status_code != 200:
+                      print(f"      -> Error: {response.text}")
+                      break
                   
-                  if all_rows:
-                      df = pd.DataFrame([extract_properties(r) for r in all_rows])
-                      safe_title = "".join(c if c.isalnum() or c in " -" else "_" for c in title).strip()
-                      csv_path = output_dir / f"{safe_title}.csv"
-                      df.to_csv(csv_path, index=False)
-                      print(f"      -> SUCCESS: Saved {len(all_rows)} rows to {csv_path.name}")
-                  else:
-                      print("      -> Database is empty.")
-              except Exception as e:
-                  print(f"      -> Skip: API Error ({type(e).__name__}: {e})")
+                  data = response.json()
+                  all_rows.extend(data.get("results", []))
+                  has_more = data.get("has_more", False)
+                  next_cursor = data.get("next_cursor")
+
+              if all_rows:
+                  df = pd.DataFrame([extract_properties(r) for r in all_rows])
+                  safe_title = "".join(c if c.isalnum() or c in " -" else "_" for c in title).strip()
+                  df.to_csv(output_dir / f"{safe_title}.csv", index=False)
+                  print(f"      -> Saved {len(all_rows)} rows.")
 
           def scan_block(block_id):
-              """Recursive crawl to find 'child_database' blocks"""
-              try:
-                  # Check if the block is a database
-                  try:
-                      db_info = notion.databases.retrieve(database_id=block_id)
-                      # Only call backup if it actually returns database metadata
-                      if db_info.get("object") == "database":
-                          db_title = db_info["title"][0]["plain_text"] if db_info["title"] else "Database"
-                          backup_database(block_id, db_title)
-                          return 
-                  except:
-                      pass
+              """Recursive crawl using direct API calls"""
+              # 1. Try to treat as database
+              db_url = f"https://api.notion.com/v1/databases/{block_id}"
+              res = requests.get(db_url, headers=HEADERS)
+              if res.status_code == 200:
+                  db_data = res.json()
+                  title = db_data["title"][0]["plain_text"] if db_data["title"] else "Database"
+                  backup_database(block_id, title)
+                  return
 
-                  # Scan children for nested databases
-                  children = notion.blocks.children.list(block_id=block_id).get("results", [])
+              # 2. Otherwise, scan children
+              child_url = f"https://api.notion.com/v1/blocks/{block_id}/children"
+              res = requests.get(child_url, headers=HEADERS)
+              if res.status_code == 200:
+                  children = res.json().get("results", [])
                   for child in children:
                       if child["type"] == "child_database":
                           backup_database(child["id"], child["child_database"]["title"])
                       elif child.get("has_children"):
                           scan_block(child["id"])
-              except Exception as e:
-                  print(f"    [!] Error scanning block {block_id}: {e}")
 
-          print("--- Starting Targeted Recursive Backup ---")
+          print("--- Starting Direct API Recursive Backup ---")
           for root_id in ROOT_IDS:
-              print(f"Searching ID: {root_id}")
+              print(f"Scanning Root: {root_id}")
               scan_block(root_id)
-
-          print("\n--- Backup script finished ---")
+          print("\n--- Backup finished ---")
           EOF
 
       - name: Commit and push changes
@@ -132,6 +127,6 @@ jobs:
           git config user.name "Nihad-BIT"
           git config user.email "nihadNV@proton.me"
           git add notion-backup/
-          git diff --staged --quiet || (git commit -m "Auto-backup Notion CRM: $(date '+%Y-%m-%d %H:%M')" && git push)
+          git diff --staged --quiet || (git commit -m "Auto-backup Notion: $(date '+%Y-%m-%d %H:%M')" && git push)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
